--- a/09-ttest_anova.Rmd
+++ b/09-ttest_anova.Rmd
@@ -117,7 +117,7 @@ students_2 %>%
   theme_minimal()
 ```
 
-## ANOVA (дисперсионный анализ)
+## ANOVA (дисперсионный анализ) {#anova}
 
 **ANOVA (ANalysis Of VAriance)** -- статистический критерий, распределение и ключевая статистика которого относятся к семейству F-распределений. Это то чуть скошенное влево распределение, уже сильно отличающееся от нормального. На этом распределении мы (точнее специально обученные программы) будут располагать F-значение, которое будет вычисляться. Этот критерий используется, когда зависимая переменная (ЗП) измерена в метрической (количественной) шкале, а независимые переменные (НП) -- категориальные (порядковые или номинативные). ANOVA применяется, когда число проводимых сравниваемых становится больше двух -- то есть, либо это одна НП, которая может принимать три значения (уровня), либо число НП больше или равно двум. 
 
