--- a/12-data_analysis_R.Rmd
+++ b/12-data_analysis_R.Rmd
@@ -458,7 +458,7 @@ whr_new %>%
 2. Посмотрите, какие страны находятся на местах с 1 по 10 и с 147 по 157 (в выводе должно быть по две колонки: `Region` и `Happiness Rank`)
 3. Сравните средний показатель экономики `Economy (GDP per Capita)` и уровень счастья `Happiness Score` в странах Восточной и центральной (Central and Eastern Europe) и Западной Европы (Western Europe). Что можно сказать про них? Где показатель экономики выше? Где люди чувствуют себя счастливее?
 4. Сравните средний показатель экономики`Economy (GDP per Capita)` и уровень счастья `Happiness Score`  в странах Западной Европы (Western Europe) и Южной Азии (Southern Asia). Что можно сказать про них? Где показатель экономики выше? Где люди чувствуют себя счастливее?
-5. Посчитайте средний `Happiness Score` по всем странам и выведете страны, которые лежат в границах ± 1 от среднего `Happiness Score` (в выводе должно быть по две колонки: `Region` и `Happiness Score`) *Подсказка: возможно, будет проще посчитать среднее отдельно и сначала сохранить его в переменную*
+5. *(Только для тех, кто работает в R)* Посчитайте средний `Happiness Score` по всем странам и выведете страны, которые лежат в границах ± 1 от среднего `Happiness Score` (в выводе должно быть по две колонки: `Region` и `Happiness Score`) *Подсказка: возможно, будет проще посчитать среднее отдельно и сначала сохранить его в переменную*
 6. Создайте колонку, в которой будет содержаться информация, в текущей стране `Happiness Score` выше или ниже среднего значения (колонка может быть заполнена, например, значениями upper и lower или любыми другими обозначениями)
 
 ## Описательные статистики и агрегация {#descriptives_r}
@@ -660,4 +660,12 @@ whr_new %>%
 4. Постройте графики плотности вероятности для переменных `Family` и `Freedom `, *(только для тех, кто работает в R)* используя как минимум 2 отличиные от дефолтных настройки (тему, цвет, тип линии, прозрачность и тд.) Примеры можно погуглить или посмотреть в [читшите](https://github.com/rstudio/cheatsheets/blob/main/data-visualization.pdf)
 5. Постройте диаграмму рассеяния для переменной `Family` по переменной `Freedom ` и *(только для тех, кто работает в R)* раскрасьте точки в зависимости от значений переменной с upper и lower, созданной в прошлой домашке.
 6. Посчитайте коэффициент корреляции между переменными `Family` и `Freedom `.
+
+## Проверка гипотез
+
+Пришло время перейти к тому, ради чего мы изучали статистику весь прошлый семестр -- проверке гипотез. Перед этим стоит повторить раздел про [статистический вывод целиком](#inference) и [алгоритм тестирования гипотез в частности](#nhst).
+
+Мы уже освоили предобработку данных и теперь совсем взрослые -- можем взять менее чистенький, расширенный датасет того же World Happiness Report за 2019 https://github.com/elenary/StatsForDA/blob/main/Chapter2OnlineData2019.xls?raw=true, а здесь можно почитать пододробнее про данные https://s3.amazonaws.com/happiness-report/2019/WHR19_Ch2A_Appendix1.pdf (кстати, этот док, судя по всему, тоже сверстан в R) 
+
+
 
