--- a/12-data_analysis_R.Rmd
+++ b/12-data_analysis_R.Rmd
@@ -806,7 +806,7 @@ t.test(`Happiness Score` ~ Region, data = whr_ttest, alternative = "less", paire
 
 t.test(`Happiness Score` ~ Region, data = whr_ttest, alternative = "two.sided", paired = FALSE, conf.level = 0.95)
 ```
-Аргумент `alternative` обозначает, какова наша нулевая гипотеза: что средние в группых *не равны* или что среднее в одной из групп *меньше или больше,* чем в другой. Аргумент `paired` указывает, нужно ли проводить зависимый т-тест. В данном случае, у нас независимые выборки, и зависимый т-тест не нужен.
+Аргумент `alternative` обозначает, какова наша альтернативная гипотеза (противоположная нулевой): что средние в группых *не равны* или что среднее в одной из групп *меньше или больше,* чем в другой. Аргумент `paired` указывает, нужно ли проводить зависимый т-тест. В данном случае, у нас независимые выборки, и зависимый т-тест не нужен.
 
 Нам может пригодиться знать и другой вариант записи т-теста и его непараметрических аналогов -- не через указание переменных из данных (обратите внимание -- мы эксплицитно задавали аргумент `data`), а без указания данных, просто передав ему два вектора:
 
