--- a/10-linear_models.Rmd
+++ b/10-linear_models.Rmd
@@ -197,7 +197,7 @@ knitr::include_graphics("docs/images/corrplot.png")
 ```
 </p>
 
-## Линейный регрессионный анализ
+## Линейный регрессионный анализ {#linreg}
 
 **Линейный регрессионный анализ** -- это ровно тот же известный нам ANOVA (дисперсионный анализ), только если заменить категориальные НП на количественные!
 
