--- a/12-data_analysis_R.Rmd
+++ b/12-data_analysis_R.Rmd
@@ -886,11 +886,9 @@ whr_tests %>%
 wilcox.test(whr_ttest$Family ~ whr_ttest$Region, alternative = "less", paired = FALSE, conf.level = 0.95)
 ```
 
-## Задания после семинара 5 {#tasks_sem5}
+### ANOVA (дисперсионный анализ)
 
-Мы уже освоили предобработку данных, и теперь совсем взрослые -- можем взять менее чистенький, расширенный датасет того же World Happiness Report за 2019 https://github.com/elenary/StatsForDA/blob/main/Chapter2OnlineData2019.xls?raw=true, а здесь можно почитать пододробнее про данные https://s3.amazonaws.com/happiness-report/2019/WHR19_Ch2A_Appendix1.pdf (кстати, этот док, судя по всему, тоже сверстан в R).
-
-Чтобы было удобнее с ним работать для проверки гипотез, я сделала его предобработку -- при повторении попробуйте ее разобрать, что делает каждая строчка? Показалось ли что-то новым? 
+Предобратаем данные: создадим новые переменные, которые уже создавали ранее в домашках, и присоединим табличку за 2016 год к новой табличке за 2019 год. Новые данные сохраним в датасет `whr_tests_hw`
 
 ```{r eval=TRUE, echo = TRUE, message = FALSE}
 
@@ -909,9 +907,39 @@ whr %>%
 # View(whr_tests)
 ```
 
+
+
+
+## Задания после семинара 5 {#tasks_sem5}
+
+Мы уже освоили предобработку данных, и теперь совсем взрослые -- можем взять менее чистенький, расширенный датасет того же World Happiness Report за 2019 https://github.com/elenary/StatsForDA/blob/main/Chapter2OnlineData2019.xls?raw=true, а здесь можно почитать пододробнее про данные https://s3.amazonaws.com/happiness-report/2019/WHR19_Ch2A_Appendix1.pdf (кстати, этот док, судя по всему, тоже сверстан в R).
+
+*(Если вы работаете в R)* Чтобы было удобнее с ним работать для проверки гипотез, я сделала его предобработку -- при повторении попробуйте ее разобрать, что делает каждая строчка? Показалось ли что-то новым? 
+
+```{r eval=TRUE, echo = TRUE, message = FALSE}
+
+whr <- read_csv("2016.csv")
+whr_2019 <- readxl::read_xls("Chapter2OnlineData2019.xls")
+
+whr_2019 %>%
+  select(`Country name`:`Standard deviation/Mean of ladder by country-year`) -> whr_2019
+
+whr %>%
+  select(Country:`Happiness Score`) %>%
+  right_join(whr_2019, by = c("Country" = "Country name"), multiple = "last") %>% 
+  mutate("top20" = ifelse(`Happiness Rank`<=20, "hehe", "not hehe"),
+         "mean_position" = ifelse(`Happiness Score`>= mean(`Happiness Score`, na.rm = TRUE), "upper", "lower")) -> whr_tests_hw
+
+# View(whr_tests)
+```
+
+*(Если вы работаете в Jamovi, ипользуйте любые данные -- старые за 2016 год или новые за 2019)*
+
 1. На полученном датасете `whr_tests_hw` проведите полностью по всему алгоритму NHST хотя бы один корреляционные тест: выберете подходящие переменные, сформулируйте гипотезу, сформулируйте $H_0$ и $H_1$, выберете уровень $\alpha$, предобработайте данные, если нужно, и проведите корреляционный тест на выбранном уровне значимости. Проинтерпретируйте результаты: подтвердилась ли гипотеза?
 
 2. На полученном датасете `whr_tests_hw` проведите полностью по всему алгоритму NHST хотя бы один т-тест или его непараметрический аналог: выберете подходящие переменные, сформулируйте гипотезу, сформулируйте $H_0$ и $H_1$, выберете уровень $\alpha$, определите, зависимые или независимые выборки, предобработайте данные, если нужно, и проведите тест сравнения средних на выбранном уровне значимости. Проинтерпретируйте результаты: подтвердилась ли гипотеза?
+
+
 
 
 
